--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <!-- <link rel="stylesheet" href="../assets/css/iframe.css"> -->
-  
+    <link rel="stylesheet" href="./estilos/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -21,7 +19,10 @@
             </section>
         </div>
         <section id="tela-mostruario">
-            <a href="home.html" target="tela"><img src="../assets/img/logo-home.jpg" alt="home"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="infantil.html" target="tela"><img src="imagens/infantil-editada.jpg" alt=""></a>
+            <a href="adulto.html" target="tela">  <img src="imagens/adulto-editada.jpg" alt=""></a>
+            <a href="cueca.html" target="tela"><img src="imagens/cueca-editada.jpg" alt=""></a>
 
             
         </section>
